--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ button {
   font-size: 40px;
   color: #fff;
   text-align: center;
+  padding-top: 60px;
 }
 
 .content {
@@ -367,7 +368,7 @@ button {
   font-size: 20px;
   color: #ebebff;
   text-align: center;
-  margin: 10px;
+  margin: 20px;
 }
 
 #name,
@@ -382,6 +383,7 @@ button {
   padding: 12px;
   margin-top: 10px;
   margin-bottom: 8px;
+  width: 90%;
 }
 
 #message {
@@ -393,8 +395,10 @@ button {
   border: 2px solid #ccc;
   border-radius: 8px;
   box-sizing: border-box;
-  width: 95%;
+  width: 90%;
   height: 150px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .submitButton {
