--- a/style.css
+++ b/style.css
@@ -223,6 +223,18 @@ p {
   font-style: normal;
 }
 
+.ruby {
+  padding: 4px 12px;
+  border-radius: 8px;
+  font-weight: 500;
+  font-size: 12px;
+  margin-right: 10px;
+  color: #6070ff;
+  background: #ebebff;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+}
+
 .css {
   padding: 4px 12px;
   border-radius: 8px;
@@ -411,4 +423,202 @@ button {
   border: 1px solid #6070ff;
   padding: 12px;
   color: #396df2;
+}
+
+.navDesk {
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  .card5,
+  .card6,
+  .card7 {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .menu-icon {
+    display: none;
+  }
+
+  .first-page {
+    background-image: none;
+  }
+
+  .logo {
+    width: 600px;
+    justify-content: start;
+    margin-top: 150px;
+    margin-left: 140px;
+  }
+  .header-container {
+    display: inline;
+  }
+
+  .navDesk {
+    display: flex;
+    width: 50%;
+    margin-left: 50%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .menuDesk {
+    display: inline;
+  }
+
+  .menuDesk a {
+    font-family: Poppins, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    color: #344563;
+    list-style: none;
+    margin-right: 16px;
+    text-decoration: none;
+  }
+
+  .headline {
+    background-image: url('src/header-shapes-mobile.svg');
+    background-size: 90%;
+    background-position: 0% 15%;
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 140px;
+    padding-bottom: 150px;
+    border-bottom-left-radius: 165px;
+  }
+
+  .title {
+    width: 600px;
+    line-height: 60px;
+    justify-content: start;
+  }
+
+  .paragraph {
+    width: 85%;
+    line-height: 28px;
+    font-size: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .mobileimg {
+    display: none;
+  }
+
+  .card2,
+  .card3,
+  .card4 {
+    display: none;
+  }
+
+  .project {
+    display: grid;
+    column-gap: 30px;
+  }
+
+  .image {
+    width: 544px;
+    height: 448px;
+    grid-area: 1/1/3/2;
+  }
+
+  .description {
+    grid-area: 1/2/3/3;
+  }
+
+  .imageReverse {
+    width: 544px;
+    height: 448px;
+    grid-area: 1/2/3/3;
+  }
+
+  .descriptionReverse {
+    grid-area: 1/1/3/2;
+  }
+
+  .about-section {
+    display: grid;
+  }
+
+  .about-hero {
+    grid-area: 1/1/3/2;
+  }
+
+  .mySkills {
+    grid-area: 1/2/3/3;
+  }
+
+  .projects .projectsReverse {
+    width: auto !important;
+    row-gap: 0;
+  }
+
+  .aboutContainer {
+    flex-direction: row;
+    border-top-right-radius: 80px;
+    background-color: #fff;
+  }
+
+  .aboutMyself {
+    width: 40%;
+    margin-top: -110px;
+    padding: 48px;
+    margin-left: 100px;
+  }
+
+  .about {
+    margin-left: 18px;
+    width: 50%;
+    height: 16%;
+  }
+
+  .mySkills {
+    width: 60%;
+  }
+
+  .skillsTitle {
+    width: 80%;
+  }
+
+  .skillsDescList {
+    width: 100px;
+    height: 100px;
+    margin-left: 0;
+    margin-right: 10px;
+    padding: 20px;
+    flex-direction: column;
+  }
+
+  .skillsDesc {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    border-radius: 8px;
+    margin-left: -77px;
+    padding: 9px 30px 0 80px;
+  }
+
+  .contact-form {
+    background-image: url('desk/contact-background-desktop.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .contactContainer {
+    background-image: url('desk/contactshapes.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .content {
+    width: 25%;
+  }
 }
