--- a/style.css
+++ b/style.css
@@ -435,6 +435,10 @@ button {
   .card7 {
     display: none;
   }
+
+  .image {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -443,18 +447,19 @@ button {
   }
 
   .first-page {
-    background-image: none;
+    background: none;
   }
 
   .logo {
     width: 600px;
-    justify-content: start;
-    margin-top: 150px;
+    padding-top: 20px;
     margin-left: 140px;
+    position: absolute;
   }
 
   .header-container {
-    display: inline;
+    display: flex;
+    position: relative;
   }
 
   .navDesk {
@@ -482,28 +487,33 @@ button {
   }
 
   .headline {
-    background-image: url('src/header-shapes-mobile.svg');
-    background-size: 90%;
-    background-position: 0% 15%;
-    align-items: flex-start;
-    justify-content: center;
+    background-image: url('desk/Headerbg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     padding-left: 140px;
     padding-bottom: 150px;
     border-bottom-left-radius: 165px;
+    width: 90%;
+    height: auto;
+  }
+  .head {
+    width: 100%;
+    height: auto;
+    background-color: white;
   }
 
   .title {
     width: 600px;
+    font-size: 3.2rem;
+    padding-top: 15%;
     line-height: 60px;
-    justify-content: start;
   }
 
   .paragraph {
-    width: 85%;
+    width: 70%;
+    margin-top: -35px;
     line-height: 28px;
     font-size: 20px;
-    align-items: center;
-    justify-content: center;
   }
 
   .mobileimg {
@@ -529,6 +539,7 @@ button {
 
   .description {
     grid-area: 1/2/3/3;
+    gap: 10px;
   }
 
   .imageReverse {
@@ -539,24 +550,32 @@ button {
 
   .descriptionReverse {
     grid-area: 1/1/3/2;
+    padding-left: 30px;
+    row-gap: 20px;
   }
 
   .about-section {
     display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-column-gap: 2px;
   }
 
   .about-hero {
-    grid-area: 1/1/3/2;
+    margin-left: 60px;
+    grid-column: 1/4;
+  }
+
+  .about-hero h2 {
+    font-size: 1.7rem;
+    padding-bottom: 10px;
+  }
+
+  .about-hero p {
+    font-size: 1.1rem;
   }
 
   .mySkills {
-    grid-area: 1/2/3/3;
-    width: 60%;
-  }
-
-  .projects .projectsReverse {
-    width: auto !important;
-    row-gap: 0;
+    grid-column: 4/9;
   }
 
   .aboutContainer {
@@ -612,11 +631,24 @@ button {
     background-size: contain;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
 
   .content {
+    width: 45%;
+    margin: 0 auto;
+  }
+
+  .inputs {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .inputs li input {
+    width: 100%;
+  }
+
+  .inputs .submitButton {
     width: 25%;
+    margin-left: 35%;
   }
 }
