--- a/style.css
+++ b/style.css
@@ -538,6 +538,10 @@ button {
     grid-area: 1/1/3/2;
   }
 
+  .image:hover {
+    transform: scale(1.3);
+  }
+
   .description {
     grid-area: 1/2/3/3;
     gap: 10px;
@@ -547,6 +551,10 @@ button {
     width: 544px;
     height: 448px;
     grid-area: 1/2/3/3;
+  }
+
+  .imageReverse:hover {
+    transform: scale(1.3);
   }
 
   .descriptionReverse {
@@ -651,5 +659,17 @@ button {
   .inputs .submitButton {
     width: 25%;
     margin-left: 35%;
+  }
+
+  #name:hover {
+    transform: translate(10px);
+  }
+
+  #email:hover {
+    transform: translate(10px);
+  }
+
+  #message:hover {
+    transform: translate(10px);
   }
 }
