--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .first-page {
   background-image: url(src/header-shapes-mobile.svg);
   background-repeat: no-repeat;
