--- a/style.css
+++ b/style.css
@@ -433,6 +433,67 @@ button {
   display: none;
 }
 
+.blur {
+  filter: blur(8px);
+}
+
+.vanish {
+  display: none;
+}
+
+.mobileNav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  margin-top: -10px;
+  margin-right: -40px;
+  background-color: #4856db;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  opacity: 0.7;
+  text-decoration: none;
+}
+
+.closeBtn {
+  position: absolute;
+  top: 19px;
+  right: 33px;
+  font-size: 36px;
+  margin-top: 12px;
+  margin-right: 20px;
+}
+
+.link {
+  text-decoration: none;
+  color: white;
+  padding-left: 30px;
+}
+
+.mobileNav li {
+  padding: 8px 8px 8px 3px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  text-decoration: none;
+  list-style: none;
+  font-weight: 600;
+  margin-top: 10px;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+}
+
+.mobileNavActive {
+  width: 100%;
+  margin: 0;
+  padding-left: 40px;
+}
+
 @media screen and (max-width: 480px) {
   .card5,
   .card6,
