--- a/modal.css
+++ b/modal.css
@@ -13,6 +13,14 @@
   display: grid;
 }
 
+.modalTitle {
+  font-family: Poppins, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  color: #172b4d;
+}
+
 .modalTagsList {
   width: 100%;
   align-items: center;
@@ -35,7 +43,7 @@
   margin: 20% 3%;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 100%;
   border-radius: 16px;
   animation-name: animatetop;
   animation-duration: 0.5s;
@@ -93,6 +101,16 @@
   justify-content: center;
 }
 
+@media screen and (max-width: 480px) {
+  .projectDescription {
+    font-size: small;
+  }
+
+  .project {
+    width: 120%;
+  }
+}
+
 @media screen and (min-width: 992px) {
   .modalView {
     margin-left: 20px;
@@ -117,7 +135,7 @@
   }
 
   .modalImg {
-    width: 90%;
+    width: 80%;
     margin-left: 5%;
     height: 100%;
   }
