Put description font to medium

--- a/modal.css
+++ b/modal.css
@@ -103,7 +103,7 @@
 
 @media screen and (max-width: 480px) {
   .projectDescription {
-    font-size: small;
+    font-size: medium;
   }
 
   .project {
